WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
66956
REGRESSION(
r93755
): It made 14 jsc test and ~500 layout test fail on Qt-ARM bot
https://bugs.webkit.org/show_bug.cgi?id=66956
Summary
REGRESSION(r93755): It made 14 jsc test and ~500 layout test fail on Qt-ARM bot
Csaba Osztrogonác
Reported
2011-08-25 10:37:44 PDT
Check the results for details:
http://build.webkit.sed.hu/builders/ARMv5%20Linux%20Qt%20Release%20%28Test%29/builds/3203
Attachments
Rebaseline constants for patching GetByIdSlowCaseCall on ARM
(2.23 KB, patch)
2011-08-25 12:12 PDT
,
Gabor Loki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2011-08-25 10:45:24 PDT
Could you include sample failures + stacktraces in these bugs? It's much more useful than a slow loading link, and the given link doesn't include any stacktraces at all thus making it completely useless. I suspect that the cause of these failures would be obvious to any Qt engineer who looked at them
Csaba Osztrogonác
Comment 2
2011-08-25 10:45:52 PDT
Zoltan (our ARM expert) said that he'll check this bug tomorrow morning.
Oliver Hunt
Comment 3
2011-08-25 10:48:44 PDT
(In reply to
comment #2
)
> Zoltan (our ARM expert) said that he'll check this bug tomorrow morning.
This should be trivial -- the problem is that the Qt bot isn't providing console output. The problem is almost certainly going to be that the size of one of the getById insn sequences has changed and the constant just needs to be updated appropriately, the assertions for these branches even tell you what the new size should be.
Gabor Loki
Comment 4
2011-08-25 12:12:25 PDT
Created
attachment 105230
[details]
Rebaseline constants for patching GetByIdSlowCaseCall on ARM A quick fix for
r93755
Oliver Hunt
Comment 5
2011-08-25 13:12:11 PDT
Comment on
attachment 105230
[details]
Rebaseline constants for patching GetByIdSlowCaseCall on ARM r=me!
WebKit Review Bot
Comment 6
2011-08-25 16:08:26 PDT
Comment on
attachment 105230
[details]
Rebaseline constants for patching GetByIdSlowCaseCall on ARM Clearing flags on attachment: 105230 Committed
r93832
: <
http://trac.webkit.org/changeset/93832
>
WebKit Review Bot
Comment 7
2011-08-25 16:08:30 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug